--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,5 +15,17 @@
         <li>{{popular_movies.title}}</li>
         {% endfor %}
         </ul>
+    <h3>Upcoming Movies</h3>
+    <ul>
+        {%for upcoming_movies in upcoming%}
+        <li>{{upcoming_movies.title}}</li>
+        {% endfor %}
+        </ul>
+    <h3>Now Showing Movies</h3>
+    <ul>
+        {%for now_showing_movie in now_showing%}
+        <li>{{now_showing.title}}</li>
+        {% endfor %}
+        </ul>
 </body>
 </html>
